@@ -5,11 +5,11 @@
 # Flags de Optimizacion normales
 CFLAGS=-Wall -g -m486
 
-# Flags de Optimizacion para Pentium 
+# Flags de Optimizacion pero puede ser peligroso usarlas :) nunca se sabe
 #CFLAGS=-O6 -Wall -mpentium 
 
 # Flags de debug
-DEBUG=-debug -g
+#DEBUG=-debug -g
 
 CC=gcc
 OBJETOS=cliente_txt.o senyal.o principal.o conf.o qserver.o fd_opc.o inet.o
