@@ -1,1 +1,2 @@
-BETA_TEST 0.9
+BETA_TEST 0.83
+
