@@ -3,8 +3,8 @@
 # Qconsoled configuration file.
 #
 
-PROGRAM="/bin/bash -login"
+PROGRAM="/nec2/Quake3/linuxq3ded +set dedicated 1"
 PASSWORD="quake"
-CONSOLES="10"
+CONSOLES="5"
 PORT="10108"
 ISSUE="Server provided by PH34R Th4 Fuck1ng Tr0uT QuakE Clan"
